[package]
name = "wavem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# symphonia = { version = "0.5.3", features = ["mp3"] }
symphonia = { path = "/Users/patrickvonplaten/Symphonia/symphonia", features = [
  "mp3",
] }
num-traits = "0.2.17"
